Dark mode minor fixes on comments

--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -449,7 +449,7 @@ body.dark article.comment {
 }
 
 body.dark article.comment:nth-child(2n) {
-  background-color: #393c42;
+  /*  background-color: #393c42;*/
 }
 
 /* /USER PAGE */
