--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -2022,7 +2022,7 @@ li.profilebadge {
 
 article.comment {
   padding: .8em 0 0 0em;
-  border-radius: 8px 0 0 8px;
+  /*  border-radius: 8px 0 0 8px; */
   background-color: #eee;
   margin: 4px 0;
 }
